objects/TASKRAY__Project_Task__c.object
<CustomObject>
    <description>This is the primary TaskRay object for tasks.  This object may be used to manage reports, dashboards, workflows and other native Salesforce functionality.</description>
    <fields>
        <fullName>CUSTOM_Count_Checklist__c</fullName>
        <label>Total Checklist items</label>
        <summaryForeignKey>TASKRAY__trChecklistItem__c.TASKRAY__Project_Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CUSTOM_Incomplete_Checklist_items__c</fullName>
        <label>Incomplete Checklist items</label>
        <summaryFilterItems>
            <field>TASKRAY__trChecklistItem__c.TASKRAY__Completed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TASKRAY__trChecklistItem__c.TASKRAY__Project_Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CUSTOM_Required_items__c</fullName>
        <label>Required items</label>
        <summaryFilterItems>
            <field>TASKRAY__trChecklistItem__c.CUSTOM_Required__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>TASKRAY__trChecklistItem__c.TASKRAY__Project_Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reason_s_for_delay__c</fullName>
        <label>Reason(s) for delay</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Deadline__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Dependent_On__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field relates a TaskRay task to its predecessor.</description>
        <label>Dependent On</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>TaskRay_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Dependent_Update_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for dependency calculations. It marks a TaskRay task as potentially requiring an update based upon its predecessor receiving an update.</description>
        <label>Dependent Update Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__List__c</fullName>
        <label>List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Holding</fullName>
                    <color>#DDDDDD</color>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Prioritized</fullName>
                    <color>#CC6600</color>
                </value>
                <value>
                    <fullName>Started</fullName>
                    <color>#3333FF</color>
                </value>
                <value>
                    <fullName>Finished</fullName>
                    <color>#009900</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <color>#DDDDDD</color>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <color>#CC6600</color>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <color>#3333FF</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__RepeatCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_End_Date__c</fullName>
        <label>Repeat End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Every__c</fullName>
        <label>Repeat Every</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Interval_Type__c</fullName>
        <label>Repeat Interval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does not repeat</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Week_Days__c</fullName>
        <label>Repeat Week Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Status__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDepOffset__c</fullName>
        <label>Dependency Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDuration__c</fullName>
        <formula>IF( ISNULL(TASKRAY__trStartDate__c), 1, (TASKRAY__Deadline__c - TASKRAY__trStartDate__c + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedHours__c</fullName>
        <label>Estimated Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHidden__c</fullName>
        <formula>IF(OR(ISBLANK(TASKRAY__trHideUntil__c),TASKRAY__trHideUntil__c&lt;=TODAY()) , false, true)</formula>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideUntilOffset__c</fullName>
        <label>Hide Until (Days Before Start)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideUntil__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(TASKRAY__trHideUntilOffset__c)),NOT(ISBLANK(TASKRAY__trStartDate__c))), TASKRAY__trStartDate__c - TASKRAY__trHideUntilOffset__c, null)</formula>
        <label>Hide Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trIsMilestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectSortOrder__c</fullName>
        <label>Project Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTime_Entry_Count__c</fullName>
        <label>Time Entry Count</label>
        <summaryForeignKey>TASKRAY__trTaskTime__c.TASKRAY__Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTotalTimeOnTask__c</fullName>
        <label>Actual Time (hrs)</label>
        <summarizedField>TASKRAY__trTaskTime__c.TASKRAY__Hours__c</summarizedField>
        <summaryForeignKey>TASKRAY__trTaskTime__c.TASKRAY__Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>TaskRay Task</label>
    <listViews>
        <fullName>All_Joel</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Project__c</columns>
        <columns>TASKRAY__Deadline__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>mosca,ward</value>
        </filters>
        <label>All Joel</label>
    </listViews>
    <listViews>
        <fullName>TASKRAY__AllProjectTasks</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Project__c</columns>
        <columns>TASKRAY__Deadline__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASKRAY__Project__c</field>
            <operation>contains</operation>
            <value>TEMPLATE</value>
        </filters>
        <label>TEMPLATE</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>TASKRAY__Project_Member_added_in_TaskRay__c</fullName>
        <label>Project Contributor added in TaskRay</label>
    </sharingReasons>
    <validationRules>
        <fullName>TASKRAY__Prevent_Complete_If_Dependent_Incomplete</fullName>
        <active>false</active>
        <description>This validation rule will prevent the completion of a task when its predecessor task is incomplete.</description>
        <errorConditionFormula>ISCHANGED(TASKRAY__trCompleted__c) &amp;&amp;
TASKRAY__trCompleted__c  = TRUE &amp;&amp;  NOT(ISNULL(TASKRAY__Dependent_On__c)) &amp;&amp;  TASKRAY__Dependent_On__r.TASKRAY__trCompleted__c = false</errorConditionFormula>
        <errorMessage>This task cannot be completed because it has a predecessor task which is not complete.</errorMessage>
    </validationRules>
</CustomObject>